# ondiagnostics

./: README.md  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/ondiagnostics/: __init__.py  __main__.py  awsconfig.py  graphql.py  pipeline.py  subprocs.py  tasks.py
src/ondiagnostics/tasks/: git.py  s3.py
tests/: conftest.py  test_awsconfig.py  test_graphql.py  test_main.py  test_pipeline.py  test_subprocs.py  test_tasks.py  test_tasks_git.py  test_tasks_s3.py  test_verify_moto.py
